# robot_pick_n_place

./: README.md
ros2_ws/src/pick_n_place_description/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/pick_n_place_description/launch/: display.launch.py
ros2_ws/src/pick_n_place_description/urdf/: fr3_with_gripper.urdf.xacro
ros2_ws/src/pick_n_place_description/urdf/end_effectors/: franka_hand.xacro
ros2_ws/src/pick_n_place_description/urdf/robots/: fr3_base.urdf.xacro
ros2_ws/src/pick_n_place_description/urdf/sensors/: rgbd_camera.xacro
ros2_ws/src/pick_n_place_gazebo/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/pick_n_place_gazebo/config/: ros2_controllers.yaml
ros2_ws/src/pick_n_place_gazebo/launch/: simulation.launch.py  spawn_blocks.launch.py
ros2_ws/src/pick_n_place_gazebo/models/block/: model.config  model.sdf
ros2_ws/src/pick_n_place_gazebo/models/table/: model.config  model.sdf
ros2_ws/src/pick_n_place_gazebo/rviz/: simulation.rviz
ros2_ws/src/pick_n_place_gazebo/scripts/: spawn_blocks.py
ros2_ws/src/pick_n_place_gazebo/worlds/: pick_place_world.sdf
ros2_ws/src/pick_n_place_motion/: README.md  package.xml  setup.py
ros2_ws/src/pick_n_place_motion/config/: moveit_params.yaml
ros2_ws/src/pick_n_place_motion/launch/: motion.launch.py
ros2_ws/src/pick_n_place_motion/pick_n_place_motion/: pick_place_node.py
ros2_ws/src/pick_n_place_perception/: README.md  package.xml  setup.py
ros2_ws/src/pick_n_place_perception/config/: camera_params.yaml
ros2_ws/src/pick_n_place_perception/launch/: perception.launch.py
ros2_ws/src/pick_n_place_perception/pick_n_place_perception/: block_detector.py
scripts/: setup.sh
