<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_n_place_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic simulation world, models, controllers and launch files for Franka FR3 pick and place</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Gazebo + ROS2 bridge -->
  <depend>ros_gz</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>sdformat_urdf</depend>

  <!-- ros2_control -->
  <depend>controller_manager</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_broadcaster</depend>

  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Robot description -->
  <depend>pick_n_place_description</depend>
  <depend>franka_description</depend>

  <!-- Runtime -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
